@@ -14,7 +14,7 @@
 
   "item.moditems.shift": "Drücke \"SHIFT\" für mehr Infos",
   "item.moditems.leather_shield": "Leder Schild. Stabilität ist 216",
-  "item.moditems.gold_shield": "Gold Schild. Stabilität ist 356",
+  "item.moditems.gold_shield": "Gold Schild. Stabilität ist 322",
   "item.moditems.diamond_shield": "Diamant Schild. Stabilität ist 512",
   "item.moditems.netherite_shield": "Netherit Schild. Stabilität ist 2042",
   "item.moditems.emerald_shield": "Smaragd Schild. Stabilität ist 512",
