@@ -13,7 +13,7 @@
 
   "item.moditems.shift": "Press \"SHIFT\" for more Info",
   "item.moditems.leather_shield": "Leather Shield. Durability is 216",
-  "item.moditems.gold_shield": "Gold Shield. Durability is 356",
+  "item.moditems.gold_shield": "Gold Shield. Durability is 322",
   "item.moditems.diamond_shield": "Diamond Shield. Durability is 512",
   "item.moditems.netherite_shield": "Netherite Shield. Durability is 2042",
   "item.moditems.emerald_shield": "Emerald Shield. Durability is 512",
